<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aviation"
        android:icon="@drawable/airplane"
        android:title="@string/aviation"
        app:showAsAction="always" />
    <item
        android:id="@+id/trivia"
        android:icon="@drawable/question"
        android:title="@string/trivia"
        app:showAsAction="always" />
    <item
        android:id="@+id/bearImage"
        android:icon="@drawable/bear2"
        android:title="@string/bear"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>