<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary">

    <TextView
        android:id="@+id/flightTitleTextView1"
        android:layout_width="336dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/your_flight_search_detail"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flightDetailsTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/flight_details"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="@id/flightTitleTextView1"
        app:layout_constraintTop_toBottomOf="@id/flightTitleTextView1" />

    <TextView
        android:id="@+id/flightNumberTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/flight_number"

        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/flightDetailsTextView1"
        app:layout_constraintTop_toBottomOf="@id/flightDetailsTextView1" />


    <TextView
        android:id="@+id/destinationTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/destination"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/flightNumberTextView1"
        app:layout_constraintTop_toBottomOf="@id/flightNumberTextView1" />

    <TextView
        android:id="@+id/terminalTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terminal"

        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/destinationTextView1"
        app:layout_constraintTop_toBottomOf="@+id/destinationTextView1" />


    <TextView

        android:id="@+id/delayTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/delay"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/terminalTextView1"
        app:layout_constraintTop_toBottomOf="@+id/terminalTextView1" />

    <TextView

        android:id="@+id/gateTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="String/gate"

        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/delayTextView1"
        app:layout_constraintTop_toBottomOf="@+id/delayTextView1" />


    <Button
        android:id="@+id/deleteButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onDeleteButtonClicked"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gateTextView1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="407dp"
        android:layout_height="227dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/deleteButton1"

        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/flight2" />


</androidx.constraintlayout.widget.ConstraintLayout>

